# Auto-Banner

./: .rustfmt.toml  Cargo.toml  LICENSE
src/: main.rs
