[package]
name = "auto-banner"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/AsteroDev/Auto-Banner"
authors = ["Vetlix <vetlix666@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = "0.3"
twilight-http = "0.3"
twilight-util = { version = "0.3", features = ["snowflake"] }
twilight-model = "0.3"
futures = { default-features = false, version = "0.3" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }