[package]
name = "auto-banner"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/AsteroDev/Auto-Banner"
authors = ["Vetlix <vetlix666@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = "0.5"
twilight-http = "0.5"
twilight-util = { version = "0.5", features = ["snowflake"] }
twilight-model = "0.5"
regex = "1.5"
futures = { default-features = false, version = "0.3" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.16" }
dotenv = "0.15"